// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RenameFolderJobDescription should match snapshot given status is ERROR 1`] = `
<body>
  <div>
    <span>
      Failed to rename folder 
      Dog.png
       to 
      Dog.png
       in 
      gdrive
      :
      Documents
    </span>
  </div>
</body>
`;

exports[`RenameFolderJobDescription should match snapshot given status is ONGOING 1`] = `
<body>
  <div>
    <span>
      Renaming folder 
      Dog.png
       to 
      Dog.png
       in 
      gdrive
      :
      Documents
    </span>
  </div>
</body>
`;

exports[`RenameFolderJobDescription should match snapshot given status is SUCCESS 1`] = `
<body>
  <div>
    <span>
      Renamed folder 
      Dog.png
       to 
      Dog.png
       in 
      gdrive
      :
      Documents
    </span>
  </div>
</body>
`;
